--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.1.1",
+    "slick-carousel": "^1.8.1",
     "tailwind-scrollbar-hide": "^1.1.7",
     "typescript": "5.0.2"
   },
